<resources>
    <string name="app_name">CodeCamp04</string>
    <string name="hint_todo">New task</string>
    <string name="homework_create_todo">Zapiš!</string>
    <string name="error_empty_task">Task cannot be empty</string>
    <string name="delete">Hotovo!</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_title">Ukol hotov?</string>
    <string name="drawer_title_profile">Profile</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_tasks">Tasks</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="drawer_title_homework">HomeWork</string>
    <string name="detail">Detail</string>
    <string name="drawer_title_view_pager">View Pager + RecyclerView</string>
    <string name="drawer_title_detail">Detail activity</string>
    <string name="show_detail">Show detail</string>
    <string name="drawer_title_menu_actions">Menu actions</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_check">Check</string>
    <string name="menu_actions_share_clicked">Kliknuti na share!</string>
    <string name="menu_actions_check_clicked">Kliknuti na check!</string>
    <string name="drawer_navigation_title">CodeCamp 04</string>
    <string name="drawer_title_settings_1">Item 1</string>
    <string name="drawer_title_settings_2">Item 2</string>
    <string name="drawer_title_homework_v2">Homework v2</string>
</resources>
