<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_check"
        android:icon="@drawable/ic_check"
        android:title="@string/menu_title_check"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_title_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/drawer_title_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_settings_1"
        android:title="@string/drawer_title_settings_1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_settings_2"
        android:title="@string/drawer_title_settings_2"
        app:showAsAction="never"/>
</menu>